changes abit in admin dashboard and readme file

--- a/templates/admin/admin_dashboard.html
+++ b/templates/admin/admin_dashboard.html
@@ -70,7 +70,7 @@
 
                     <div class="card">
                         <div class="card-title">Reviews</div>
-                        <div class="card-value">3/5</div>
+                        <div class="card-value">{{average_rating}}/5</div>
                         <div class="negative">-1.5 from last month</div>
                     </div>
                 </div>
